<resources>
    <string name="app_name">RealifeTech Sdk</string>
    <string name="general">General</string>
    <string name="device_configuration">Device Configuration</string>
    <string name="api_url">API URL</string>
    <string name="graph_ql">GraphQL URL</string>
    <string name="ordering_journey_url">Ordering Journey URL</string>
    <string name="communicate">Communicate</string>
    <string name="analytics">Analytics</string>
    <string name="caIdentity">CA Identity</string>
    <string name="audience">Audience</string>
    <string name="app_version">"App Version: "</string>
    <string name="dash">-</string>
    <string name="widgets">Widgets</string>
    <string name="web_page">Web Page</string>
    <string name="ordering_journey">Ordering Journey</string>
    <string name="campaign_automation">Campaign Automation</string>
    <string name="ca_datalayer">CA with DataLayer</string>
    <string name="ca_integrator_banner">Integrator Banner</string>
    <string name="ca_recycler_view">Recycler View</string>
    <string name="ca_jetpack_compose">Jetpack Compose</string>
    <string name="audio_guides_help">audioGuidesHelp</string>
    <string name="tandc">tAndC</string>
    <string name="privacy">privacy</string>
    <string name="about">about</string>
    <string name="host_campaign_automation">cawidgets</string>
    <string name="host_login_scheme">rlthostapplogin</string>
    <string name="host_scheme">rtlsmpapp</string>
    <string name="about_company">aboutCompany</string>
    <string name="purchaseHelp">purchasesHelp</string>
    <string name="query_web_page">Query Web Page</string>
    <string name="query_campaign_automation">Query Campaign Automation</string>
    <string name="result">Result:</string>
    <string name="error_in_loading">Error in loading: </string>
    <string name="please_select_type">"Please select a type"</string>
    <string name="identity_login_title">Login to unlock new features</string>
    <string name="identity_logout_title">Logout before you leave</string>
    <string name="identity_email">enter your email</string>
    <string name="identity_password">enter password</string>
    <string name="identity_login">login</string>
    <string name="identity_button">Identity</string>
    <string name="identity_logout">Logout</string>
    <string name="identity">Identity</string>
    <string name="query_sso_id">Query SSO ID</string>
    <string name="user_access_token">User access token</string>
    <string name="user_access_token_message">Enter User accessToken</string>
    <string name="identity_sso">IDENTITY-SSO</string>
    <string name="banner_image">banner image</string>
    <string name="title">Title:</string>
    <string name="subtitle">Subtitle:</string>
</resources>
